--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "node":"16",
   "type": "module",
   "scripts": {
     "start": "nodemon server.js"
